wrap text. fix header.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,12 @@ h1 {
     padding: 20px; 
 }
 
+
+
 h2 {
-    color: #666666;
-    padding-top: 10px;
-    padding-bottom:10px; 
+    color: #4aaaa5;
+    padding-top: 20px;
+    padding-bottom:20px; 
     border-bottom: 5px solid #666666;
 }
 
@@ -77,18 +79,30 @@ input[type=text] {
     border: 2px solid #666666;
     border-radius: 2px;
     width: 600px;
+    height: 20px;
 }
 
 textarea {
     border: 2px solid #666666;
-    border-radius: 2px;
+    border-radius: 6px;
     width: 600px;
     height: 200px;
 }
 
+.button{
+    border: none;
+    font-size: 18px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 20px 40px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: #6aece5;
+}
+
 /*Text box on images*/
-
-
 
 .text-block {
     position: absolute;
